--- a/package.json
+++ b/package.json
@@ -18,6 +18,18 @@
     "mcp:setup": "tsx scripts/setup-mcp.ts",
     "mcp:start": "cursor mcp start supabase",
     "mcp:sample-queries": "tsx scripts/mcp-sample-queries.ts",
+    "populate:auto": "tsx scripts/populate-database-automation.ts",
+    "populate:fortune500": "tsx -e \"import { populateFortune500Companies } from './src/lib/companyDataSources.js'; populateFortune500Companies().then(console.log).catch(console.error);\"",
+    "populate:startups": "tsx -e \"import { populateTechStartups } from './src/lib/companyDataSources.js'; populateTechStartups().then(console.log).catch(console.error);\"",
+    "supabase:optimize": "tsx scripts/supabase-cost-optimization.ts",
+    "supabase:monitor": "tsx -e \"import { getSupabaseUsageMetrics, calculateCostEstimate } from './src/lib/supabaseMonitoring.js'; getSupabaseUsageMetrics().then(m => console.log('Usage:', m, 'Cost:', calculateCostEstimate(m))).catch(console.error);\"",
+    "sections:detect": "tsx scripts/run-automated-detection.ts",
+    "sections:test-data": "tsx scripts/add-sections-test-data.ts",
+    "wall:test": "tsx scripts/test-wall-sections.ts",
+    "scraping:run": "tsx scripts/run-web-scraping.ts",
+    "scraping:demo": "tsx scripts/run-web-scraping.ts --demo",
+    "scraping:monitor": "tsx scripts/run-web-scraping.ts --monitor",
+    "scraping:validate": "tsx scripts/run-web-scraping.ts --validate",
     "mcp:setup-procedures": "tsx scripts/setup-stored-procedures.ts",
     "mcp:runner": "node scripts/run-mcp-server.js",
     "mcp:fix-database": "tsx scripts/mcp-database-fixes.ts",
